--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -2,7 +2,7 @@
 .search-bar__datetime,
 .search-bar__search {
   border-radius: var(--border-radius);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 10px var(--shadow-color);
 }
 
 .search-bar__locations,
