--- a/src/components/TripList.css
+++ b/src/components/TripList.css
@@ -2,7 +2,7 @@
   background-color: var(--bg-color);
   border-radius: var(--border-radius);
   border: 1px solid var(--bg-color);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 10px var(--shadow-color);
   list-style: none;
   margin: 0;
   padding: 0;
